@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - API change: Add timeout option, remove http option
 
 0.006     2015-11-16 09:34:58+11:00 Australia/Melbourne
  - API change: Return undef when KV key not found
